--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,19 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
     padding: 5px;
-    margin: 0;}
+    margin: 0;
+}
 body {
     background-color: white;
 }
+
 header {
     background-color: rgb(52, 152, 199);   
     color: black;
     font-size:45px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
 }
 
 header nav {
@@ -19,47 +24,135 @@ header nav {
     justify-content: flex-end;
 }
 
+main {
+    display:flex;
+}
+
+aside {
+    flex-direction: column;
+    font-size: 50px;
+    color: rgb(10, 10, 97);
+    flex: 1 0 0;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    background-color:aqua;
+}
+
 #About_Me {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    background-color:#bdb2f4;
 }
-#About_Me article, #Work aside, #Contact_Me h1{
-    font-size: 50px;
-    color: rgb(10, 10, 97);
-}
+
 #About_Me img {
     width: 270px;
     height: 250px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
 }
+
+article:hover {
+    color:rgb(238, 227, 78);
+    box-shadow: 0 5px 15px rgb(238, 227, 78);
+    transition: flex-basis 500ms linear;
+}
+
 #Work {
+    background-color:#bdb2f4;
+    padding: 0px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-aside, article {
-    display: flex;
-    flex-direction: row;
-    padding: 15px;
-    font-size: 10px;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border-width: 5px;
 }
-.Snippet img {
+
+.images_title {  
+    position: relative; 
+    margin: 0rem 0 -0.5rem 0;
+    padding: 0.5rem 11rem;
+    background-color:#fff400d9;
+    color: black;
+    border: 3px solid;
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+}
+
+.code_types { 
+    position: relative;
+    margin: -3rem 0 -0.5rem 0px;
+    padding: 0.5rem 10rem;
+    background-color: #ef4747;
+    color: black;
+    border: 3px solid;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+}  
+
+.images_title2 {
+    position: relative;
+    margin: 0rem 0 -0.5rem 0;
+    padding: 0.5rem 1rem;
+    background-color: #fff400d9;
+    color: black;
+    border: 3px solid;
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+    height: 40px;
+    width: 195px;
+    text-align: center;
+}
+
+.code_types2 {
+    position: relative;
+    margin: -3rem 0 -0.5rem 0;
+    background-color: #ef4747;
+    color: black;
+    border: 3px solid;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+    height: 40px;
+    width: 195px;
+}  
+
+
+.large{
     width: 540px;
     height: 500px;
 }
-.Horiseon img {
-    display: flex;
-    flex-direction: row;
-    padding: 15px;
-    font-size: 10px;
+
+.Mid{
     width: 270px;
-    height: 250px;
+    height: 250px; 
 }
-footer{
+
+#Contact_Me {
     display: flex;
     flex-direction: row;
-    padding: 15px;
-    font-size: 20px;
-    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    font-size: 30px;
+    background-color:#bdb2f4;
 }
+
+footer {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        padding: 0px;
+        margin: 0px;
+    }
+  } 
