--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,52 +1,29 @@
-/* * {
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-    padding: 5px;
-    margin: 0;}
-
-header{
-    background-color: rgb(52, 152, 199);   
-    color: black;
-}
-
-header nav li{
-    background-color: rgb(189, 199, 52);   
-    color: black;
-}
-.Sean-Ye {
-    width: 270px;
-    height: 245px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.AutomationEngineer {
-    width: 270px;
-    height: 245px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-body {
- check font family */
-    /* background-color: rgba(221, 228, 215, 0.856); */
-/* }   
-
-nav {
-    FONT-WEIGHT: 200;
-    padding-left: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 20px;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-@media screen and (min-width: 768px) {
-    header nav {
-        padding-top: 15px;
-        margin-right: 0px;
-        float: right;
-        font-size: 17px;
-    }
-  }  */
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  body {
+    min-height: 100%;
+    line-height: 1;
+    font-family: sans-serif;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 100%;
+  }
+  
+  input, select, option, optgroup, textarea, button,
+  pre, code {
+    font-size: 100%;
+    font-family: inherit;
+  }
+  
+  ol, ul {
+    list-style: none;
+  }
